--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <div class="container">
     <div class="content-container">
-      <p>Gerenciador de produtos</p>
+      <h2 class="title">Gerenciador de produtos</h2>
     </div>
   </div>
 </mat-toolbar>
